--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+    <section class="container mt-5">
+        <h1 class="p-3 text-success">Writen part question ans</h1>
+
+        <h5>What does js event loop do?</h5>
+        <p>
+
+        </p>
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
