--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
         <h1 class="p-3 text-success">Writen part question ans</h1>
 
         <h5>What does js event loop do?</h5>
-        <p>
-
+        <p>Event loop work, like as an assistant of the call stack and call queue. when call stack gets asynchronous
+            function then immediately set it to web api after completing the task web api sent it to call queue. when
+            call stack has no function to execute event loop run a loop and take function from call queue and set it to
+            call stack and then call stack run that function.
+            Note: call stack follow LIFI(last in fast out) rules ans call queue follow FIFO(first in first out)rules.
         </p>
     </section>
     <footer></footer>
